ui inicio das paginas

--- a/ui/ui/src/app/components/login/login.component.html
+++ b/ui/ui/src/app/components/login/login.component.html
@@ -1,1 +1,28 @@
-<p>login works!</p>
+<div class="login-container d-flex justify-content-center align-items-center">
+  <div class="login-form text-center">
+    <h2 class="mb-4 text-white">Entrar</h2>
+    <form>
+      <div class="form-group">
+        <input
+          type="email"
+          class="form-control mb-3"
+          id="email"
+          placeholder="Digite seu e-mail"
+        />
+      </div>
+      <div class="form-group">
+        <input
+          type="password"
+          class="form-control mb-3"
+          id="password"
+          placeholder="Digite sua senha"
+        />
+      </div>
+      <button type="submit" class="btn btn-dark btn-block mb-3">Entrar</button>
+    </form>
+    <small class="text-muted"
+      >Ainda não tem uma conta?
+      <a href="register" class="text-white">Registrar-se</a></small
+    >
+  </div>
+</div>
