--- a/ui/ui/src/app/components/nav/nav.component.html
+++ b/ui/ui/src/app/components/nav/nav.component.html
@@ -1,2 +1,37 @@
-<p>nav works!</p>
-<p>nav</p>
+<nav class="navbar navbar-expand-lg custom-navbar">
+  <div class="container-fluid">
+    <div class="d-flex justify-content-between w-100">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="home"
+            ><fa-icon [icon]="['fas', 'home']"></fa-icon> Home</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="products"
+            ><fa-icon [icon]="['fas', 'boxes']"></fa-icon> Produtos</a
+          >
+        </li>
+      </ul>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link"
+            ><fa-icon [icon]="['fas', 'store']"></fa-icon> zShop</a
+          >
+        </li>
+      </ul>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="login"
+            ><fa-icon [icon]="['fas', 'sign-in-alt']"></fa-icon> Login</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="register"
+            ><fa-icon [icon]="['fas', 'user-plus']"></fa-icon> Registrar</a
+          >
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
