'address' spelling fixed, more ui features

--- a/ui/ui/src/app/components/login/login.component.html
+++ b/ui/ui/src/app/components/login/login.component.html
@@ -1,20 +1,22 @@
 <div class="login-container d-flex justify-content-center align-items-center">
   <div class="login-form text-center">
     <h2 class="mb-4 text-white">Entrar</h2>
-    <form>
+    <form (ngSubmit)="login()" #loginForm="ngForm">
       <div class="form-group">
         <input
-          type="email"
+          [(ngModel)]="model.username"
+          name="username"
+          type="text"
           class="form-control mb-3"
-          id="email"
           placeholder="Digite seu e-mail"
         />
       </div>
       <div class="form-group">
         <input
+          [(ngModel)]="model.password"
+          name="password"
           type="password"
           class="form-control mb-3"
-          id="password"
           placeholder="Digite sua senha"
         />
       </div>
