ui -> more features TODO: profile component needs to be refracted like list-products does

--- a/ui/ui/src/app/components/footer/footer.component.html
+++ b/ui/ui/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer mt-auto">
+<footer class="footer mt-3">
   <div class="footer-container">
     <div class="rights">Todos os direitos reservados © 2023</div>
     <div class="social-icons">
