--- a/ui/ui/src/app/components/register/register.component.html
+++ b/ui/ui/src/app/components/register/register.component.html
@@ -3,45 +3,33 @@
 >
   <div class="register-form text-center">
     <h2 class="mb-4 text-white">Registrar</h2>
-    <form>
-      <div class="form-group">
-        <input
-          type="text"
-          class="form-control mb-3"
-          id="name"
-          placeholder="Nome Completo"
-        />
-      </div>
-      <div class="form-group">
-        <input
-          type="email"
-          class="form-control mb-3"
-          id="email"
-          placeholder="E-mail"
-        />
-      </div>
-      <div class="form-group">
-        <input
-          type="password"
-          class="form-control mb-3"
-          id="password"
-          placeholder="Senha"
-        />
-      </div>
-      <div class="form-group">
-        <input
-          type="password"
-          class="form-control mb-3"
-          id="confirm-password"
-          placeholder="Confirmar Senha"
-        />
-      </div>
-      <button type="submit" class="btn btn-dark btn-block mb-3">
+    <form [formGroup]="registerUserForm" (ngSubmit)="Submit()">
+      <app-form-validation
+        [formControl]="$any(registerUserForm.controls['username'])"
+        [label]="'Email'"
+      ></app-form-validation>
+      <app-form-validation
+        [formControl]="$any(registerUserForm.controls['knownAs'])"
+        [label]="'Username'"
+      ></app-form-validation>
+      <app-form-validation
+        [formControl]="$any(registerUserForm.controls['password'])"
+        [label]="'password'"
+      ></app-form-validation>
+      <app-form-validation
+        [formControl]="$any(registerUserForm.controls['confirmPassword'])"
+        [label]="'confirm password'"
+      ></app-form-validation>
+
+      <button
+        type="submit"
+        class="btn btn-dark btn-block mb-3"
+        [disabled]="!registerUserForm.valid"
+      >
         Registrar
       </button>
     </form>
-    <small class="text-muted"
-      >Já possui uma conta?
+    <small class="text-muted">
       <a href="login" class="text-white">Já tem uma conta?</a></small
     >
   </div>
