--- a/ui/ui/src/app/components/user-profile/profile/profile.component.html
+++ b/ui/ui/src/app/components/user-profile/profile/profile.component.html
@@ -34,7 +34,7 @@
 
         <!-- Endereços -->
         <app-user-addresses
-          (addressToEdit)="addrressEdit($event)"
+          (addressToEdit)="addressEdit($event)"
           (addressToDelete)="deleteAddress($event)"
           [addresses]="user.addresses"
         ></app-user-addresses>
@@ -44,21 +44,6 @@
 </div>
 
 <!-- Modal -->
-<app-register-address-modal></app-register-address-modal>
-
-<!-- Loading Modal -->
-<div class="modal" tabindex="-1" role="dialog" *ngIf="isLoading">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-body text-center">
-        <div class="spinner-border text-primary" role="status">
-          <span class="sr-only">Carregando...</span>
-        </div>
-        <p>Carregando...</p>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Backdrop para a modal de loading -->
-<div *ngIf="isLoading" class="modal-backdrop fade show"></div>
+<app-register-address-modal
+  (wasAdded)="addressAddedSuccessfully($any($event))"
+></app-register-address-modal>
