--- a/ui/ui/src/app/app.component.html
+++ b/ui/ui/src/app/app.component.html
@@ -1,7 +1,7 @@
-<app-nav></app-nav>
-
 <div class="d-flex flex-column min-vh-100">
-  <router-outlet></router-outlet>
+  <app-nav></app-nav>
+  <div class="content flex-grow-1">
+    <router-outlet></router-outlet>
+  </div>
+  <app-footer></app-footer>
 </div>
-
-<app-footer></app-footer>
