--- a/ui/ui/src/app/components/footer/footer.component.html
+++ b/ui/ui/src/app/components/footer/footer.component.html
@@ -2,8 +2,14 @@
   <div class="footer-container">
     <div class="rights">Todos os direitos reservados © 2023</div>
     <div class="social-icons">
-      <a href="https://github.com/" target="_blank" title="GitHub">
+      <a
+        href="https://github.com/joaovictoroli/eshop.project"
+        target="_blank"
+        title="GitHub"
+        class="github-link"
+      >
         <fa-icon [icon]="['fab', 'github']"></fa-icon>
+        <span class="text-github">joaovictoroli</span>
       </a>
     </div>
   </div>
