--- a/ui/ui/src/app/components/nav/nav.component.scss
+++ b/ui/ui/src/app/components/nav/nav.component.scss
@@ -1,5 +1,5 @@
 .custom-navbar {
-  background-color: #333; // Um cinza escuro. Você pode ajustar conforme sua preferência
+  background-color: #333;
   .nav-link {
     color: white;
     &:hover {
@@ -14,4 +14,67 @@
   &:hover {
     color: #ddd;
   }
+}
+
+.position-absolute {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 1.25rem;
+  height: 1.25rem;
+  border-radius: 50%;
+  font-size: 0.75rem;
+
+  @media (max-width: 576px) {
+    top: -0.25rem;
+    left: -0.25rem; // Mude de 'right' para 'left'
+    min-width: 1rem;
+    height: 1rem;
+    font-size: 0.6rem;
+  }
+}
+
+.nav-item {
+  position: relative;
+
+  a {
+    position: relative;
+
+    &:hover {
+      .badge-neutral {
+        background-color: #a8dadc; // Um tom de azul suave no hover
+        color: #fafafa; // Um branco mais claro no hover
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); // Sombra suave no hover
+      }
+
+      fa-icon {
+        color: #a8dadc; // Mudar a cor do ícone no hover para coincidir com o badge
+      }
+    }
+  }
+
+  .badge-neutral {
+    background-color: #bac1b8;
+    color: black;
+    transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out,
+      box-shadow 0.3s ease-in-out;
+  }
+
+  a:hover .badge-neutral {
+    background-color: #5992b5; // Um azul um pouco mais escuro ao passar o mouse
+    color: #fafafa; // Um branco um pouco mais claro ao passar o mouse
+  }
+  fa-icon {
+    color: #f1f1f1; // A cor padrão do ícone é um branco um pouco mais claro
+    transition: color 0.3s ease-in-out; // Transição suave da cor do ícone
+  }
+}
+
+.no-caret::after {
+  display: none;
+}
+
+.dropdown-menu {
+  max-width: 90vw; /* ajuste conforme necessário */
+  overflow-x: auto;
 }
