--- a/ui/ui/src/app/components/products/list-product/list-product.component.html
+++ b/ui/ui/src/app/components/products/list-product/list-product.component.html
@@ -1,16 +1,16 @@
 <div class="container p-sm-3 p-md-4 p-lg-5 mt-sm-3 mt-md-4 mt-lg-5">
   <!-- Filtros -->
-  <div class="filters mb-3">
+  <div class="filters form-inline mb-3">
+    <label class="text-white">PreçoMin: </label>
     <input
       type="number"
-      placeholder="Preço Mínimo"
       class="form-control"
       [(ngModel)]="queryParams.minprice"
       min="0"
     />
+    <label class="text-white">PreçoMax: </label>
     <input
       type="number"
-      placeholder="Preço Máximo"
       class="form-control"
       [(ngModel)]="queryParams.maxprice"
       min="0"
@@ -47,12 +47,10 @@
 
   <ul class="pagination justify-content-center">
     <li class="page-item" [class.disabled]="pagination?.currentPage === 1">
-      <a class="page-link" (click)="setCurrentPage(1)">Primeiro</a>
+      <a class="page-link" (click)="changePage(1)">Primeiro</a>
     </li>
     <li class="page-item" [class.disabled]="pagination?.currentPage === 1">
-      <a
-        class="page-link"
-        (click)="setCurrentPage(pagination?.currentPage! - 1)"
+      <a class="page-link" (click)="changePage(pagination?.currentPage! - 1)"
         >Anterior</a
       >
     </li>
@@ -61,15 +59,13 @@
       *ngFor="let page of getPages()"
       [class.active]="pagination?.currentPage === page"
     >
-      <a class="page-link" (click)="setCurrentPage(page)">{{ page }}</a>
+      <a class="page-link" (click)="changePage(page)">{{ page }}</a>
     </li>
     <li
       class="page-item"
       [class.disabled]="pagination?.currentPage === pagination?.totalPages"
     >
-      <a
-        class="page-link"
-        (click)="setCurrentPage(pagination?.currentPage! + 1)"
+      <a class="page-link" (click)="changePage(pagination?.currentPage! + 1)"
         >Próximo</a
       >
     </li>
@@ -77,7 +73,7 @@
       class="page-item"
       [class.disabled]="pagination?.currentPage === pagination?.totalPages"
     >
-      <a class="page-link" (click)="setCurrentPage(pagination?.totalPages!)"
+      <a class="page-link" (click)="changePage(pagination?.totalPages!)"
         >Último</a
       >
     </li>
